--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Installing Surge
         run: npm install --global surge
       - name: deploying using surge
-        run: surge ./http://bootcamp_class_one.surge.sh --Token {{secrets.SURGE_TOKEN}}
+        run: surge ./http://bootcamp_class_one.surge.sh --Token ${{secrets.SURGE_TOKEN}}
          
