--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -22,13 +22,13 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Installing Node
-        run: actions/setup-node@v2-beta
-        with: 
-          node-version: 10 
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 12
 
       # Runs a set of commands using the runners shell
       - name: Installing Surge
         run: npm install --global surge
       - name: deploying using surge
-        run: surge ./http://bootcamp_class_one.surge.sh --Token ${{secrets.YOUR_SECRET_NAME}}
+        run: surge ./http://bootcamp_class_one.surge.sh --Token ${{ secrets.YOUR_SECRET_NAME }}
          
